# opencv_old_libdc1394

./: .gitignore  Makefile.am  build.sh  configure.in  configure.sh  install.sh
CVS/: Entries
_make/: .cvsignore  make_all_bc.mak  make_all_gnu.mak  make_all_ms.mak  make_cfg.mak  make_module_bc.mak  make_module_gnu.mak  make_module_ms.mak  makefile.32  makefile.64  makefile.i7  makefile.icc  makefile.vs  opencv.dsw  opencv.vs2005.no_openmp.sln  opencv.vs2005.sln
_make/CVS/: Entries  Repository
apps/: Makefile.am
apps/CVS/: Entries  Repository
apps/CamShiftDemo/: CamShiftDemo.cpp  CamShiftDemo.dsp  CamShiftDemo.h  CamShiftDemoDoc.cpp  CamShiftDemoDoc.h  CamShiftDemoView.cpp  CamShiftDemoView.h  StdAfx.cpp  StdAfx.h  mainfrm.cpp  mainfrm.h  resource.h
apps/Common/: Camera.cpp  Camera.h
apps/HMMDemo/: ContEHMM.cpp  ContEHMM.h  FaceBase.cpp  FaceBase.h  HMMDemo.cpp  HMMDemo.dsp  HMMDemo.h  HMMDemoDoc.cpp  HMMDemoDoc.h  HMMDemoView.cpp  HMMDemoView.h  HMMParams.cpp  HMMParams.h  ImageBaseView.cpp  ImageBaseView.h  InfoDialogs.cpp  InfoDialogs.h  MainFrm.cpp  MainFrm.h  MiscParams.cpp  MiscParams.h  SamplingParams.cpp  SamplingParams.h  StdAfx.cpp  StdAfx.h  Threads.cpp  Threads.h  multiprocdiv.h  resource.h
apps/HaarFaceDetect/: HaarFaceDetect.dsp  Makefile.am  facedetect.cpp
apps/Hawk/: AviSource.cpp  ChildFrm.cpp  ChildFrm.h  DSWnd.cpp  DSWnd.h  FuncDialog.cpp  FuncDialog.h  GotoLine.cpp  GotoLine.h  Hawk.cpp  Hawk.dsp  Hawk.h  HawkDoc.cpp  HawkDoc.h  HawkOptions.cpp  HawkOptions.h  HawkView.cpp  wrap.c  (+22 more)
apps/cvcaptest/: Makefile.am  cvcap.cpp  dc1394v2.cpp
(+827 files in other folders)
